Update paper description in index.html
Replaced a brief description with a detailed explanation of the study's findings using Pareto Task Inference.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <span class="paper-meta">Unpublished · 2024</span><br>
             <span class="paper-meta">A. Shnaidman, A. Meisel, O. Ventura</span>
             <p class="muted">
-              Explores structural/functional connectivity trade-offs using high-dimensional neuroimaging data and trade-off characterization methods.
+            Applies Pareto Task Inference (ParTI) to high-dimensional structural MRI features from the Human Connectome Project to probe structure–function relationships, finding limited evidence for robust structural archetypes but identifying statistically significant structural enrichments near previously defined functional archetypes.
             </p>
           </td>
         </tr>
