--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <span class="paper-meta">arXiv · 2026 · Under review (ICLR ReALM–GEN workshop)</span><br>
             <span class="paper-meta">A. Shnaidman, E. Feiglin, O. Yaari, E. Mentel, A. Levi, R. Lapid</span>
             <p class="muted">
-              Inference-time steering method for masked diffusion language models via activation-level signals, enabling controllable behavior without retraining.
+            Introduces an inference-time activation steering method for masked diffusion language models (MDLMs), extracting a single low-dimensional direction from contrastive prompt sets in one forward pass and applying a global residual-stream intervention throughout reverse diffusion.
             </p>
           </td>
         </tr>
@@ -262,7 +262,7 @@
             <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
             <span class="paper-meta"><em>* Acknowledged for contributions</em></span>
             <p class="muted">
-            Introduces <strong>BenchOverflow</strong>, a model-agnostic benchmark of nine plain-text prompting strategies that induce excessive generations without jailbreaks or policy circumvention. Using a fixed 5,000-token budget and tail-risk metrics (e.g., CSR/ECDF), it shows overflow is reproducible yet model-dependent—and that a simple conciseness reminder significantly reduces heavy-tail over-generation across most models.
+            Introduces <strong>BenchOverflow</strong>, a model-agnostic benchmark of nine plain-text prompting strategies that induce excessive generations without jailbreaks or policy circumvention.
             </p>
           </td>
         </tr>
@@ -280,7 +280,7 @@
             <span class="paper-meta">Unpublished · 2024</span><br>
             <span class="paper-meta">A. Shnaidman, A. Meisel, O. Ventura</span>
             <p class="muted">
-            Applies Pareto Task Inference (ParTI) to high-dimensional structural MRI features from the Human Connectome Project to probe structure–function relationships, finding limited evidence for robust structural archetypes but identifying statistically significant structural enrichments near previously defined functional archetypes.
+            Applies Pareto Task Inference (ParTI) to high-dimensional structural MRI features from the Human Connectome Project to probe structure–function relationships.
             </p>
           </td>
         </tr>
