--- a/index.html
+++ b/index.html
@@ -241,10 +241,9 @@
               Activation Steering for Masked Diffusion Language Models
             </a><br>
             <span class="paper-meta">arXiv · 2026 · Under review (ICLR ReALM–GEN workshop)</span><br>
-            <span class="paper-meta">A. Shnaidman, E. Feiglin, O. Yaari, E. Mentel, A. Levi, R. Lapid</span>
+            <span class="paper-meta"><strong>A. Shnaidman</strong>, E. Feiglin, O. Yaari, E. Mentel, A. Levi, R. Lapid</span>
             <p class="muted">
-            Introduces an inference-time activation steering method for masked diffusion language models (MDLMs), extracting a single low-dimensional direction from contrastive prompt sets in one forward pass and applying a global residual-stream intervention throughout reverse diffusion.
-            </p>
+            Introduces an inference-time activation steering method for masked diffusion language models (MDLMs).
           </td>
         </tr>
       </table>
@@ -278,7 +277,7 @@
               Structure–Function Tradeoffs in the Human Brain
             </span><br>
             <span class="paper-meta">Unpublished · 2024</span><br>
-            <span class="paper-meta">A. Shnaidman, A. Meisel, O. Ventura</span>
+            <span class="paper-meta"><strong>A. Shnaidman</strong>, A. Meisel, O. Ventura</span>
             <p class="muted">
             Applies Pareto Task Inference (ParTI) to high-dimensional structural MRI features from the Human Connectome Project to probe structure–function relationships.
             </p>
