Comment out GitHub link
Comment out the GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
           <p style="margin-top: 14px;">
             <a href="mailto:adishnaidman@gmail.com">Email</a> &nbsp;/&nbsp;
-            <a href="https://github.com/AdiShnaidman">GitHub</a> &nbsp;/&nbsp;
+            <!-- <a href="https://github.com/AdiShnaidman">GitHub</a> &nbsp;/&nbsp; -->
             <a href="https://www.linkedin.com/in/adi-shnaidman/">LinkedIn</a>
           </p>
         </td>
