Refactor index.html to improve readability
Updated text to remove HTML entity encoding and commented out sections for education and volunteer.

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
       <tr>
         <td class="intro-left">
           <p>
-            I’m a <strong>Machine Learning Researcher</strong> focused on advancing the <strong>robustness, safety, and reliability</strong> of large language models.
-            At <strong>DeepKeep</strong>, I research and build real-time detection and mitigation strategies to protect LLMs against adversarial prompts, misuse, and unintended behaviors.
+            I’m a Machine Learning Researcher focused on advancing the robustness, safety, and reliability of large language models.
+            At DeepKeep, I research and build real-time detection and mitigation strategies to protect LLMs against adversarial prompts, misuse, and unintended behaviors.
           </p>
 
           <p>
@@ -300,17 +300,17 @@
     </div>
 
     <!-- Education -->
-    <div class="section">
+    <!-- <div class="section">
       <h2>Education</h2>
       <p>
         <strong>The Hebrew University of Jerusalem</strong><br>
         B.Sc. Computer Science (Data Science Track) &nbsp;·&nbsp; B.Sc. Statistics and Data Science (Data Science Track)<br>
         <span class="muted">Mentored by Prof. Matan Gavish and Prof. Asaf Weinstein</span>
       </p>
-    </div>
+    </div> -->
 
     <!-- Volunteer -->
-    <div class="section">
+    <!-- <div class="section">
       <h2>Volunteer</h2>
       <p>
         <strong>Combatting Global Misinformation and Antisemitism Project</strong> (Oct 2023 – Jan 2024)<br>
@@ -318,7 +318,7 @@
           Initiated and led a global volunteer project facilitating discussions with participants worldwide to counter misinformation and promote accurate narratives.
         </span>
       </p>
-    </div>
+    </div> -->
 
     <div class="footer">
       © <span id="year"></span> Adi Shnaidman
