Refine research interests list in index.html

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
       <p class="muted"><strong>Research interests:</strong></p>
       <ul>
         <li>LLM safety and robustness; trustworthiness and behavioral reliability</li>
-        <li>Representation learning and mechanistic interpretability (as applicable to safety)</li>
-        <li>Inference-time control / activation steering</li>
+        <li>Representation learning and mechanistic interpretability</li>
+        <li>Inference-time control</li>
       </ul>
     </div>
 
