Fix HTML encoding for research description

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <div class="section">
       <h2>Research</h2>
       <p>
-        My work sits at the intersection of <strong>LLM safety</strong>, <strong>adversarial robustness</strong>, and <strong>behavioral reliability</strong>.
+        My work sits at the intersection of LLM safety, adversarial robustness, and behavioral reliability.
         I build evaluation and detection methods that help identify and mitigate failures in production settings—especially under adversarial pressure and real-world misuse patterns.
       </p>
 
