Update job experience entries in index.html

--- a/index.html
+++ b/index.html
@@ -425,20 +425,19 @@
       </div>
     </li>
 
-    <li>
-      <div class="when">Feb 2019<br>– Dec 2020</div>
-      <div class="what">
-        <div><span class="role">Head of Intelligence Research &amp; Data Analysis Teams</span>, <span class="org">Confidential</span></div>
-        <div class="desc">Led analytics teams; executive decision support; large-scale DB insights.</div>
-      </div>
-    </li>
+<li>
+  <div class="when">Aug 2016<br>– Dec 2020</div>
+  <div class="what">
+    <div style="margin-bottom: 6px;">
+      <div><span class="role">Head of Intelligence Research &amp; Data Analysis Teams</span>, <span class="org">Confidential</span> <span class="muted">(Feb 2019 – Dec 2020)</span></div>
+      <div class="desc">Led analytics teams; executive decision support; large-scale DB insights.</div>
+    </div>
 
-    <li>
-      <div class="when">Aug 2016<br>– Feb 2019</div>
-      <div class="what">
-        <div><span class="role">Data Research Analyst</span>, <span class="org">Confidential</span></div>
-      </div>
-    </li>
+    <div>
+      <div><span class="role">Data Research Analyst</span>, <span class="org">Confidential</span> <span class="muted">(Aug 2016 – Feb 2019)</span></div>
+    </div>
+  </div>
+</li>
   </ul>
 </div>
 
