Update job roles in index.html
Removed the date range for the Head of Intelligence Research role and deleted the Data Research Analyst entry.

--- a/index.html
+++ b/index.html
@@ -429,12 +429,8 @@
   <div class="when">Aug 2016<br>– Dec 2020</div>
   <div class="what">
     <div style="margin-bottom: 6px;">
-      <div><span class="role">Head of Intelligence Research &amp; Data Analysis Teams</span>, <span class="org">Confidential</span> <span class="muted">(Feb 2019 – Dec 2020)</span></div>
+      <div><span class="role">Head of Intelligence Research &amp; Data Analysis Teams</span>, <span class="org">Confidential</span> <span class="muted"></span></div>
       <div class="desc">Led analytics teams; executive decision support; large-scale DB insights.</div>
-    </div>
-
-    <div>
-      <div><span class="role">Data Research Analyst</span>, <span class="org">Confidential</span> <span class="muted">(Aug 2016 – Feb 2019)</span></div>
     </div>
   </div>
 </li>
