Update work experience entries in index.html

--- a/index.html
+++ b/index.html
@@ -401,21 +401,28 @@
       </div>
     </li>
 
-    <li>
-      <div class="when">Jun 2024<br>– May 2025</div>
-      <div class="what">
-        <div><span class="role">Data Scientist</span>, <span class="org">ComDePri Lab</span></div>
-        <div class="desc">Modeling and reconstruction of high-frequency human movement time-series; predictive modeling and data mining.</div>
-      </div>
-    </li>
+<li>
+  <div class="when">Oct 2023<br>– May 2025</div>
 
-    <li>
-      <div class="when">Oct 2023<br>– Oct 2024</div>
-      <div class="what">
-        <div><span class="role">Capstone Researcher &amp; Data Scientist</span>, <span class="org">ComDePri Lab</span></div>
-        <div class="desc">Pareto trade-offs in brain structure/function; dimensionality reduction and archetypal analysis.</div>
+  <div class="what">
+    <div style="margin-bottom: 10px;">
+      <div>
+        <span class="role">Data Scientist</span>, <span class="org">ComDePri Lab</span>
+        <span class="muted">(Jun 2024 – May 2025)</span>
       </div>
-    </li>
+      <div class="desc">Modeling and reconstruction of high-frequency human movement time-series; predictive modeling and data mining.</div>
+    </div>
+
+    <div>
+      <div>
+        <span class="role">Capstone Researcher &amp; Data Scientist</span>, <span class="org">ComDePri Lab</span>
+        <span class="muted">(Oct 2023 – Oct 2024)</span>
+      </div>
+      <div class="desc">Pareto trade-offs in brain structure/function; dimensionality reduction and archetypal analysis.</div>
+    </div>
+  </div>
+</li>
+
 
 <li>
   <div class="when">Aug 2016<br>– Oct 2021</div>
