--- a/index.html
+++ b/index.html
@@ -302,20 +302,34 @@
     </table>
 
     <!-- Research -->
-    <div class="section">
-      <h2>Research</h2>
-      <p>
-        My work sits at the intersection of LLM safety, adversarial robustness, and behavioral reliability.
-        I build evaluation and detection methods that help identify and mitigate failures in production settings—especially under adversarial pressure and real-world misuse patterns.
-      </p>
+<!-- Research -->
+<div class="section">
+  <h2>Research</h2>
 
-      <p class="muted"><strong>Research interests:</strong></p>
-      <ul>
-        <li>LLM safety and robustness; trustworthiness and behavioral reliability</li>
-        <li>Representation learning and mechanistic interpretability</li>
-        <li>Inference-time control</li>
-      </ul>
-    </div>
+  <!-- Research statement (reads like an academic homepage) -->
+  <p>
+    My research focuses on <strong>robustness and safety of large language models</strong>, with an emphasis on
+    <strong>evaluation methodology</strong> and <strong>adversarial robustness</strong>.
+    I design <strong>benchmarks</strong> and <strong>stress-test protocols</strong> that reveal systematic failure modes under
+    distribution shift, prompt-based attacks, and long-horizon interaction.
+  </p>
+
+  <p>
+    More broadly, I am interested in connecting empirical evaluations to actionable mitigation:
+    developing <strong>model-agnostic detection signals</strong>, analyzing error regimes, and translating findings into
+    deployment-relevant safeguards for real-world LLM systems.
+  </p>
+
+  <!-- Interests list (research homepage style) -->
+  <p class="muted"><strong>Research interests:</strong></p>
+  <ul>
+    <li>LLM safety and robustness; trustworthiness and behavioral reliability</li>
+    <li>Adversarial prompting and prompt injection; red-teaming and evaluation design</li>
+    <li>Benchmarking and measurement of failure modes (e.g., overflow / over-generation)</li>
+    <li>Representation learning and mechanistic interpretability (as applicable to safety)</li>
+    <li>Inference-time control and steering methods</li>
+  </ul>
+</div>
 
     <!-- Publications -->
     <div class="section">
