--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
 <div class="section">
   <h2>Research</h2>
 
-  <!-- Research statement (reads like an academic homepage) -->
   <p>
     My research focuses on <strong>robustness and safety of large language models</strong>, with an emphasis on
     <strong>evaluation methodology</strong> and <strong>adversarial robustness</strong>.
@@ -320,14 +319,11 @@
     deployment-relevant safeguards for real-world LLM systems.
   </p>
 
-  <!-- Interests list (research homepage style) -->
   <p class="muted"><strong>Research interests:</strong></p>
   <ul>
     <li>LLM safety and robustness; trustworthiness and behavioral reliability</li>
-    <li>Adversarial prompting and prompt injection; red-teaming and evaluation design</li>
-    <li>Benchmarking and measurement of failure modes (e.g., overflow / over-generation)</li>
     <li>Representation learning and mechanistic interpretability (as applicable to safety)</li>
-    <li>Inference-time control and steering methods</li>
+    <li>Inference-time control</li>
   </ul>
 </div>
 
