--- a/index.html
+++ b/index.html
@@ -302,21 +302,19 @@
     </table>
 
     <!-- Research -->
-<!-- Research -->
 <div class="section">
   <h2>Research</h2>
 
   <p>
-    My research focuses on <strong>robustness and safety of large language models</strong>, with an emphasis on
-    <strong>evaluation methodology</strong> and <strong>adversarial robustness</strong>.
-    I design <strong>benchmarks</strong> and <strong>stress-test protocols</strong> that reveal systematic failure modes under
-    distribution shift, prompt-based attacks, and long-horizon interaction.
+    A central theme in my research is linking <strong>representations</strong> to safe behavior in large language models.
+    I investigate which internal features and interpretable signals correspond to harmful, unstable, or non-robust behaviors,
+    and how these signals evolve across prompts, contexts, and interaction length.
   </p>
 
   <p>
-    More broadly, I am interested in connecting empirical evaluations to actionable mitigation:
-    developing <strong>model-agnostic detection signals</strong>, analyzing error regimes, and translating findings into
-    deployment-relevant safeguards for real-world LLM systems.
+    Building on these insights, I study <strong>inference-time control</strong> as a principled problem:
+    how to use representation-level information to characterize behavioral regimes and to constrain generations in a way that is
+    measurable, generalizable, and compatible with modern LLMs.
   </p>
 
   <p class="muted"><strong>Research interests:</strong></p>
