--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
   <h2>Research</h2>
 
   <p>
-    A central theme in my research is linking <strong>representations</strong> to safe behavior in large language models.
+    A central theme in my research is linking representations to safe behavior in large language models.
     I investigate which internal features and interpretable signals correspond to harmful, unstable, or non-robust behaviors,
     and how these signals evolve across prompts, contexts, and interaction length.
   </p>
 
   <p>
-    Building on these insights, I study <strong>inference-time control</strong> as a principled problem:
-    how to use representation-level information to characterize behavioral regimes and to constrain generations in a way that is
-    measurable, generalizable, and compatible with modern LLMs.
+    Building on these insights, I investigate inference-time control as a research problem:
+    how representation-level information can be used to characterize behavioral regimes and guide model outputs in a
+    principled, measurable, and generalizable way.
   </p>
 
   <p class="muted"><strong>Research interests:</strong></p>
