--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@
   <h2>Research</h2>
 
   <p>
-    A central theme in my research is linking representations to safe behavior in large language models.
-    I investigate which internal features and interpretable signals correspond to harmful, unstable, or non-robust behaviors,
-    and how these signals evolve across prompts, contexts, and interaction length.
+    A central theme in my research is connecting <strong>representations</strong> to safe behavior in large language models.
+    I study internal features and interpretable signals that correlate with harmful, unstable, or non-robust behavior,
+    and use them to better understand when and why these failures arise.
   </p>
 
   <p>
-    Building on these insights, I investigate inference-time control as a research problem:
+    Building on these insights, I investigate <strong>inference-time control</strong> as a research problem:
     how representation-level information can be used to characterize behavioral regimes and guide model outputs in a
     principled, measurable, and generalizable way.
   </p>
@@ -324,7 +324,6 @@
     <li>Inference-time control</li>
   </ul>
 </div>
-
     <!-- Publications -->
     <div class="section">
       <h2>Selected Publications &amp; Contributions</h2>
