--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
             <span class="paper-meta"><em>* Acknowledged for contributions</em></span>
             <p class="muted">
-            Introduces <strong>BenchOverflow</strong>, a model-agnostic benchmark of nine plain-text prompting strategies that induce excessive generations without jailbreaks or policy circumvention.
+            Introduces BenchOverflow, a model-agnostic benchmark of nine plain-text prompting strategies that induce excessive generations without jailbreaks or policy circumvention.
             </p>
           </td>
         </tr>
