--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
     <div style="margin-bottom: 10px;">
       <div>
-        <span class="role">Head of Intelligence Research &amp; Data Analysis Teams</span>, <span class="org">Confidential</span>
+        <span class="role">Head of Research & Analytics</span>, <span class="org">Confidential</span>
         <span class="muted">(Feb 2019 – Dec 2020)</span>
       </div>
       <div class="desc">Led analytics teams; executive decision support; large-scale DB insights.</div>
