--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </a><br>
             <span class="paper-meta">TMLR · 2025 · Accepted to NVIDIA GTC 2026</span><br>
             <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
-            <span class="paper-meta"><em>* Acknowledged for contributions</em></span>
+            <span class="paper-meta"><em>* Acknowledged contributor</em></span>
             <p class="muted">
             Introduces BenchOverflow, a model-agnostic benchmark of nine plain-text prompting strategies that induce excessive generations without jailbreaks or policy circumvention.
             </p>
