--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
             Herzliya (Tel Aviv District), Israel · DeepKeep · The Hebrew University of Jerusalem
           </p>
 
-          <p style="margin-top: 14px;">
-            <a href="mailto:adishnaidman@gmail.com">Email</a> &nbsp;/&nbsp;
-            <!-- <a href="https://github.com/AdiShnaidman">GitHub</a> &nbsp;/&nbsp; -->
-            <a href="https://www.linkedin.com/in/adi-shnaidman/">LinkedIn</a>
-          </p>
+        <p style="margin-top: 14px;">
+          <a href="mailto:adishnaidman@gmail.com">Email</a> &nbsp;/&nbsp;
+          <a href="https://scholar.google.com/citations?user=odp1n3kAAAAJ&hl=iw" target="_blank" rel="noopener">Scholar</a> &nbsp;/&nbsp;
+          <a href="https://www.linkedin.com/in/adi-shnaidman/" target="_blank" rel="noopener">LinkedIn</a>
+        </p>
         </td>
 
         <td class="intro-right">
