--- a/index.html
+++ b/index.html
@@ -152,17 +152,16 @@
     p{ margin: 10px 0; }
     .muted{ color: var(--muted); }
 
-    .profile-img{
-      width: 100%;
-      max-width: 160px;
-      aspect-ratio: 1 / 1;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 1px solid var(--border);
-      box-shadow: 0 6px 24px rgba(17,24,39,.08);
-      display: block;
-      margin-left: auto;
-    }
+      .profile-img{
+        width: 160px;
+        height: 160px;
+        object-fit: cover;
+        border-radius: 50%;
+        border: 1px solid var(--border);
+        box-shadow: 0 6px 24px rgba(17,24,39,.08);
+        display: block;
+        margin-left: auto;
+      }
 
     .section{
       padding: 14px 0;
