--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
 
         <p style="margin-top: 14px;">
           <a href="https://scholar.google.com/citations?user=odp1n3kAAAAJ&hl=iw" target="_blank" rel="noopener">Scholar</a> &nbsp;/&nbsp;
-          <a href="https://www.linkedin.com/in/adi-shnaidman/" target="_blank" rel="noopener">LinkedIn</a>
-          <a href="mailto:adishnaidman@gmail.com">Email</a> &nbsp;/&nbsp;
+          <a href="https://www.linkedin.com/in/adi-shnaidman/" target="_blank" rel="noopener">LinkedIn</a> &nbsp;/&nbsp;
+          <a href="mailto:adishnaidman@gmail.com">Email</a>
         </p>
         </td>
 
