--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </p>
 
           <p class="muted">
-            Herzliya (Tel Aviv District), Israel · DeepKeep · The Hebrew University of Jerusalem
+            Tel Aviv, Israel · DeepKeep · The Hebrew University of Jerusalem
           </p>
 
         <p style="margin-top: 14px;">
