--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
               Structure–Function Tradeoffs in the Human Brain
             </span><br>
             <span class="paper-meta">Unpublished · 2024</span><br>
-            <span class="paper-meta"><strong>A. Shnaidman</strong>, A. Meisel, O. Ventura</span>
+            <span class="paper-meta"><strong>A. Shnaidman</strong>, A. Meisel, O. Ventura, R. Schurr, Y. Hart</span>
             <p class="muted">
             Applies Pareto Task Inference (ParTI) to high-dimensional structural MRI features from the Human Connectome Project to probe structure–function relationships.
             </p>
