--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
   <div class="what">
     <div style="margin-bottom: 10px;">
       <div>
-        <span class="role">Principal Research &amp; Data Lead</span>, <span class="org">Confidential</span>
+        <span class="role">Principal Research &amp; Data Lead</span>, <span class="org">Large Enterprise Organization</span>
         <span class="muted">(Dec 2020 – Oct 2021)</span>
       </div>
       <div class="desc">Domain expert leadership, strategic recommendations, analysis standards.</div>
@@ -444,7 +444,7 @@
 
     <div style="margin-bottom: 10px;">
       <div>
-        <span class="role">Head of Research & Analytics</span>, <span class="org">Confidential</span>
+        <span class="role">Head of Research & Analytics</span>, <span class="org">Large Enterprise Organization</span>
         <span class="muted">(Feb 2019 – Dec 2020)</span>
       </div>
       <div class="desc">Led analytics teams; executive decision support; large-scale DB insights.</div>
@@ -452,7 +452,7 @@
 
     <div>
       <div>
-        <span class="role">Data Research Analyst</span>, <span class="org">Confidential</span>
+        <span class="role">Data Research Analyst</span>, <span class="org">Large Enterprise Organization</span>
         <span class="muted">(Aug 2016 – Feb 2019)</span>
       </div>
     </div>
