--- a/index.html
+++ b/index.html
@@ -461,6 +461,19 @@
 
   </ul>
 </div>
+<!-- Honors & Awards -->
+<div class="section">
+  <h2>Honors &amp; Awards</h2>
+
+  <div style="margin-top: 8px;">
+    <div style="font-weight:700;">Monday’s Excellence Scholarship</div>
+    <div class="paper-meta">Issued by Monday.com &amp; The Hebrew University of Jerusalem · Jan 2024</div>
+    <p class="muted" style="margin-top: 6px;">
+      Selected as one of the top 30 students in the School of Computer Science &amp; Engineering for outstanding personal
+      and academic achievement.
+    </p>
+  </div>
+</div>
 
 
     <!-- Education -->
