--- a/index.html
+++ b/index.html
@@ -382,19 +382,48 @@
       </table>
     </div>
 
-      <!-- Honors & Awards -->
+<!-- Honors & Awards -->
 <div class="section">
   <h2>Honors &amp; Awards</h2>
 
-  <div style="margin-top: 8px;">
-    <div style="font-weight:700;">Monday’s Excellence Scholarship</div>
-    <div class="paper-meta">Issued by Monday.com &amp; The Hebrew University of Jerusalem · Jan 2024</div>
-    <p class="muted" style="margin-top: 6px;">
-      Selected as one of the top 30 students in the School of Computer Science &amp; Engineering for outstanding personal
-      and academic achievement.
-    </p>
-  </div>
+  <ul class="honors">
+    <li>
+      <div class="title">
+        <span class="badge">Award</span>
+        Monday’s Excellence Scholarship
+      </div>
+      <div class="meta">Monday.com &amp; The Hebrew University of Jerusalem · Jan 2024</div>
+      <div class="desc">
+        Selected as one of the top 30 students in the School of Computer Science &amp; Engineering for outstanding
+        personal and academic achievement.
+      </div>
+    </li>
+
+    <li>
+      <div class="title">
+        <span class="badge">Recognition</span>
+        Significant Volunteer Contribution During the Swords of Iron War
+      </div>
+      <div class="meta">The Hebrew University of Jerusalem · Jan 2024</div>
+      <div class="desc">
+        Selected as one of 100 students for the University Board of Governors Event in recognition of significant
+        volunteer contributions.
+      </div>
+    </li>
+
+    <li>
+      <div class="title">
+        <span class="badge">Award</span>
+        Outstanding Admission Score Award
+      </div>
+      <div class="meta">The Hebrew University of Jerusalem · Oct 2021</div>
+      <div class="desc">
+        Awarded for outstanding academic achievements prior to program admission.
+      </div>
+    </li>
+  </ul>
 </div>
+
 
     <!-- Experience -->
     <!-- <div class="section">
