--- a/index.html
+++ b/index.html
@@ -17,6 +17,53 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
+    /* Honors */
+.honors{
+  list-style: none;
+  padding-left: 0;
+  margin: 10px 0 0;
+}
+
+.honors li{
+  margin: 10px 0;
+  padding: 14px 14px;
+  border: 1px solid var(--border);
+  border-radius: 14px;
+  background: #f8fafc;
+  box-shadow: 0 6px 18px rgba(17,24,39,.06);
+}
+
+.honors .title{
+  font-weight: 700;
+  font-size: 16px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.honors .badge{
+  font-size: 12px;
+  font-weight: 700;
+  padding: 3px 10px;
+  border-radius: 999px;
+  background: var(--highlight);
+  border: 1px solid #f1e6a3;
+  line-height: 1.3;
+  white-space: nowrap;
+}
+
+.honors .meta{
+  margin-top: 4px;
+  font-size: 14px;
+  color: var(--muted);
+}
+
+.honors .desc{
+  margin-top: 8px;
+  color: var(--muted);
+  font-size: 14px;
+}
+
 /* Timeline */
 .timeline{ 
   margin: 10px 0 0;
