--- a/index.html
+++ b/index.html
@@ -17,52 +17,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
-    /* Honors */
-.honors{
-  list-style: none;
-  padding-left: 0;
-  margin: 10px 0 0;
-}
-
-.honors li{
-  margin: 10px 0;
-  padding: 14px 14px;
-  border: 1px solid var(--border);
-  border-radius: 14px;
-  background: #f8fafc;
-  box-shadow: 0 6px 18px rgba(17,24,39,.06);
-}
-
-.honors .title{
-  font-weight: 700;
-  font-size: 16px;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-.honors .badge{
-  font-size: 12px;
-  font-weight: 700;
-  padding: 3px 10px;
-  border-radius: 999px;
-  background: var(--highlight);
-  border: 1px solid #f1e6a3;
-  line-height: 1.3;
-  white-space: nowrap;
-}
-
-.honors .meta{
-  margin-top: 4px;
-  font-size: 14px;
-  color: var(--muted);
-}
-
-.honors .desc{
-  margin-top: 8px;
-  color: var(--muted);
-  font-size: 14px;
-}
 
 /* Timeline */
 .timeline{ 
@@ -433,40 +387,23 @@
 <div class="section">
   <h2>Honors &amp; Awards</h2>
 
-  <ul class="honors">
+  <ul>
     <li>
-      <div class="title">
-        <span class="badge">Award</span>
-        Monday’s Excellence Scholarship
-      </div>
-      <div class="meta">Monday.com &amp; The Hebrew University of Jerusalem · Jan 2024</div>
-      <div class="desc">
-        Selected as one of the top 30 students in the School of Computer Science &amp; Engineering for outstanding
-        personal and academic achievement.
-      </div>
+      <strong>Monday’s Excellence Scholarship</strong>
+      <div class="paper-meta">Monday.com &amp; The Hebrew University of Jerusalem · Jan 2024</div>
+      <div class="muted">Top 30 students in the School of Computer Science &amp; Engineering for outstanding personal and academic achievements.</div>
     </li>
 
     <li>
-      <div class="title">
-        <span class="badge">Recognition</span>
-        Significant Volunteer Contribution During the Swords of Iron War
-      </div>
-      <div class="meta">The Hebrew University of Jerusalem · Jan 2024</div>
-      <div class="desc">
-        Selected as one of 100 students for the University Board of Governors Event in recognition of significant
-        volunteer contributions.
-      </div>
+      <strong>Significant Volunteer Contribution During the Swords of Iron War</strong>
+      <div class="paper-meta">The Hebrew University of Jerusalem · Jan 2024</div>
+      <div class="muted">Selected as one of 100 students for the University Board of Governors Event in recognition of volunteer contributions.</div>
     </li>
 
     <li>
-      <div class="title">
-        <span class="badge">Award</span>
-        Outstanding Admission Score Award
-      </div>
-      <div class="meta">The Hebrew University of Jerusalem · Oct 2021</div>
-      <div class="desc">
-        Awarded for outstanding academic achievements prior to program admission.
-      </div>
+      <strong>Outstanding Admission Score Award</strong>
+      <div class="paper-meta">The Hebrew University of Jerusalem · Oct 2021</div>
+      <div class="muted">Awarded for outstanding academic achievements prior to program admission.</div>
     </li>
   </ul>
 </div>
