--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     </li>
 
     <li>
-      <strong>Significant Volunteer Contribution During the Swords of Iron War</strong>
+      <strong>Significant Volunteer Contribution</strong>
       <div class="paper-meta">The Hebrew University of Jerusalem · Jan 2024</div>
       <div class="muted">Selected as one of 100 students for the University Board of Governors Event in recognition of volunteer contributions.</div>
     </li>
