--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
   <ul>
     <li>
-      <strong>Monday’s Excellence Scholarship</strong>
+      <strong>Monday.com–HUJI Excellence Scholarship</strong>
       <div class="paper-meta">Monday.com &amp; The Hebrew University of Jerusalem · Jan 2024</div>
       <div class="muted">Top 30 students in the School of Computer Science &amp; Engineering for outstanding personal and academic achievements.</div>
     </li>
