--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
         </td>
 
         <td class="intro-right">
-          <a href="assets/profile.jpg">
-            <img class="profile-img" src="assets/profile.jpg" alt="Adi Shnaidman">
-          </a>
+<td class="intro-right">
+  <img class="profile-img" src="assets/profile.jpg" alt="Adi Shnaidman">
+</td>
         </td>
       </tr>
     </table>
