--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
   <h2>Research</h2>
 
   <p>
-    A central theme in my research is connecting representations to safe behavior in large language models.
-    I study internal features and interpretable signals that correlate with harmful, unstable, or non-robust behavior,
-    and use them to better understand when and why these failures arise.
+  I’m especially interested in connecting representations to safe behavior in large language models.
+  In particular, I focus on interpretable internal signals associated with harmful, unstable, or non-robust behavior,
+  to better understand when and why these failures arise.
   </p>
 
   <p>
