--- a/index.html
+++ b/index.html
@@ -336,17 +336,17 @@
 <div class="section">
   <h2>Research</h2>
 
-  <p>
+<p>
   I’m especially interested in connecting representations to safe behavior in large language models.
   In particular, I focus on interpretable internal signals associated with harmful, unstable, or non-robust behavior,
   to better understand when and why these failures arise.
-  </p>
+</p>
 
-  <p>
-    Building on these insights, I investigate inference-time control as a research problem:
-    how representation-level information can be used to characterize behavioral regimes and guide model outputs in a
-    principled, measurable, and generalizable way.
-  </p>
+<p>
+  Building on this, I’m interested in inference-time control as a research direction:
+  how representation-level information can be used to characterize behavioral regimes and guide model outputs in a
+  principled, measurable, and generalizable way.
+</p>
 
   <p class="muted"><strong>Research interests:</strong></p>
   <ul>
