--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
     <!-- Research -->
 <div class="section">
-  <h2>Research</h2>
+  <h2>Research interests</h2>
 
 <p>
   I’m especially interested in connecting representations to safe behavior in large language models.
